tests/sema/fail/v11_fail_adt_implicit_struct_to_union.ep
# COMPILE_FAIL: let e expected Expr, got Leaf
struct Leaf { value: i64 }
type Expr = Leaf
fun main(): void {
    let e: Expr = new Leaf { value: 1 }
}
